another media edit

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,272 @@
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 */
+/* Adjusts webpage sizes and dimensions on screen sizes 1280px - 768px */
+@media screen and (max-width: 1280px) {
+  header h1 {
+      font-size: 150%;
+  }
+  header nav ul li a {
+      font-size: 100%;
+      flex-wrap: wrap;
+  }
+  .banner {
+      height: 200px;
+      max-width: 100%;
+      margin-bottom: 50px;
+      background-image: url("../images/header-image-2-small.jpg");
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-end;
+  }
+  .banner h3 {
+      font-size: 100%;
+  }
+  .flexbox-1 aside h3 {
+      text-align: right;
+      padding: 0 10px 0 50%;
+      font-size: 30px;
+  }
+  .flexbox-1 article {
+      max-width: 80%;
+      padding: 0 50px 0 30px;
+  }
+  .flexbox-1 article p {
+      font-size: 22px;
+      padding: 0 40px 0 20px;
+  }
+  .flexbox-2 aside h3 {
+      text-align: right;
+      padding: 0 10px 0 50%;
+      font-size: 30px;
+  }
+  .flexbox-2 figure{
+      max-width: 80%;
+      padding: 0 70px 0 50px;
+  }
+  .flexbox-2 figure a img {
+      width: 70%;
+      border-radius: 5%;
+  }
+  projects {
+    max-width: 80%;
+    height: auto;
+    border-radius: 5%;
+    border: 3px solid rgba(50, 241, 226, 1);
+}
+  .flexbox-3 aside h3 {
+    text-align: right;
+    padding: 0 10px 0 50%;
+    font-size: 30px;
+}
+  .flexbox-3 nav ul li {
+    display: inline;
+    padding: 5px 20px;
+}
+  .flexbox-3 nav ul li a {
+    text-decoration: none;
+    border-bottom: 3px solid rgba(50, 241, 226, 1);
+    padding: 3px;
+    color:rgba(50, 241, 226, 1);
+    font-size: 100%;
+    font-weight: bold;
+}
+}
+/* Adjusts webpage sizes and dimensions on screen sizes 768px - 576px */
+@media screen and (max-width: 768px) {
+  header h1 {
+      font-size: 150%;
+  }
+  header nav ul li a {
+      font-size: 100%;
+      flex-wrap: wrap;
+  }
+  .banner {
+      height: 200px;
+      max-width: 100%;
+      margin-bottom: 50px;
+      background-image: url("../images/header-image-2-small.jpg");
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-end;
+  }
+  .banner h3 {
+      font-size: 100%;
+      flex-wrap: wrap;
+  }
+  .flexbox-1 aside h3 {
+      text-align: right;
+      padding: 0 10px 0 50%;
+      font-size: 30px;
+  }
+  .flexbox-1 article {
+      max-width: 80%;
+      padding: 0 50px 0 30px;
+    }
+    
+    .flexbox-1 article p {
+        font-size: 22px;
+        padding: 0 40px 0 20px;
+    }
+    .flexbox-2 aside h3 {
+        text-align: right;
+        padding: 0 10px 0 50%;
+        font-size: 30px;
+    }
+    .flexbox-2 figure{
+        max-width: 80%;
+        padding: 0 70px 0 30px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .flexbox-2 figure a img {
+        width: 80%;
+        border-radius: 5%;
+    }
+    .projects {
+        max-width: 90%;
+        height: auto;
+        border-radius: 5%;
+        border: 3px solid rgba(50, 241, 226, 1);
+    }
+    .flexbox-3 aside h3 {
+        text-align: right;
+        padding: 0 10px 0 50%;
+        font-size: 30px;
+    }
+    .flexbox-3 nav ul li {
+        display: inline;
+        padding: 5px 20px;
+    }
+    .flexbox-3 nav ul li a {
+      text-decoration: none;
+        border-bottom: 3px solid rgba(50, 241, 226, 1);
+        padding: 5px;
+        color:rgba(50, 241, 226, 1);
+        font-size: 100%;
+        font-weight: bold;
+    }
+}
+/* Adjusts webpage size, dimensions, and layout on screens 576px or smaller */
+@media screen and (max-width: 576px) {
+  header h1 {
+      font-size: 100%;
+  }
+  header nav {
+      padding: 10px 0 0 0;
+  }
+  header nav ul {
+      flex-wrap: wrap;
+      display: flex;
+  }
+  header nav ul li{
+      margin: 10px;
+      padding: 0;
+  }
+  header nav ul li a {
+      font-size: 60%;
+  }
+  .banner {
+      height: 200px;
+      max-width: 100%;
+      margin-bottom: 50px;
+      background-image: url("../images/header-image-2-small.jpg");
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-end;
+  }
+  .banner h3 {
+      font-size: 100%;
+      flex-wrap: wrap;
+  }
+  .flexbox-1 {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      padding-bottom: 10%;
+    }
+    .flexbox-1 aside {
+        margin-bottom: 25px;
+        border-bottom: 5px solid rgba(34, 34, 34, 1);
+        border-right: none;
+        display: flex;
+        justify-content: center;
+    }
+    .flexbox-1 aside h3 {
+        font-size: 24px;
+        padding: 0;
+    }
+    .flexbox-1 article {
+        display: flex;
+        max-width: 100%;
+        padding: 0;
+        flex-direction: column;
+    }
+    .flexbox-1 article p {
+        font-size: 14px;
+        padding: 0 15px;
+    }
+    .flexbox-2 {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding-bottom: 10%;
+      }
+      .flexbox-2 aside {
+          margin-bottom: 25px;
+          border-bottom: 5px solid rgba(34, 34, 34, 1);
+          border-right: none;
+          display: flex;
+          justify-content: center;
+      }
+      .flexbox-2 aside h3 {
+          padding: 0;
+          font-size: 24px;
+      }
+      .flexbox-2 figure{
+          max-width: 100%;
+          padding: 0;
+      }
+      .flexbox-2 figure a img {
+          width: 60%;
+          border-radius: 5%;
+          border: 1px solid rgba(50, 241, 226, 1);
+      }
+      .flexbox-3 {
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+      }
+      .flexbox-3 aside {
+          margin-bottom: 25px;
+          border-bottom: 5px solid rgba(34, 34, 34, 1);
+          border-right: none;
+          display: flex;
+          justify-content: center;
+          padding: 0;
+      }
+      .flexbox-3 aside h3 {
+          text-align: right;
+          padding: 0;
+          font-size: 24px;
+      }
+      .flexbox-3 nav {
+          padding: 10px;
+      }
+      .flexbox-3 nav ul {
+          display: flex;
+          justify-content: space-between;
+      }
+      .flexbox-3 nav ul li {
+          display: inline;
+          padding: 5px 19px;
+      }
+      .flexbox-3 nav ul li a {
+          font-size: 60%;
+          padding: 2px;
+  
+      } 
+  }
 
 @import url("font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900");
@@ -877,13 +1143,6 @@ dialog > button {
   color: hsl(var(--fc-error-hsl)); 
   border-color: hsl(var(--fc-error-hsl));
   box-shadow: 0px 0px 0px 3px hsla(var(--fc-error-hsl), 12%);
-}
-
-  @media screen and (max-width: 768px) {
-    main,
-    nav {
-      flex-direction: column;
-    }
-  
 };
+
 /*=====  End of Fields  ======*/
